@@ -1,3 +1,11 @@
+2006-01-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* README: Updated, additional information
+	* makefile.msc:
+	* shptriangle.c: Added new triangle frontend
+	* Makefile: New MinGW makefile
+	* AUTHORS: Added standard file
+
 2006-01-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* shapedelaunay.c: Updated version number to 0.1.0; added support for
